# services/agent-api/src/resolveops/models/contract_generation.py
@@ -28,10 +28,14 @@ from resolveops.models.contracts import (
     CaseCategory,
     CaseClassification,
     CaseStatus,
+    DuplicateChargeValidation,
     EvidenceBundle,
+    EvidenceClaim,
     EvidenceItem,
+    EvidenceVerification,
     FinalResponse,
     InvestigationPlan,
+    PolicyDecision,
     ProposalStatus,
     ReadToolName,
     RequestedToolCall,
@@ -48,6 +52,7 @@ from resolveops.models.contracts import (
     Urgency,
     WorkflowEvent,
     WorkflowEventType,
+    WorkflowOutcome,
     WorkflowRun,
 )
 
@@ -59,6 +64,7 @@ CONTRACT_ENUMS: tuple[type[StrEnum], ...] = (
     ReadToolName,
     ActionType,
     RiskLevel,
+    WorkflowOutcome,
     ProposalStatus,
     ApprovalDecisionType,
     ActionExecutionStatus,
@@ -76,8 +82,12 @@ CONTRACT_MODELS: tuple[type[BaseModel], ...] = (
     RequestedToolCall,
     EvidenceItem,
     EvidenceBundle,
+    EvidenceClaim,
+    EvidenceVerification,
+    DuplicateChargeValidation,
     ActionProposalInput,
     ResolutionProposal,
+    PolicyDecision,
     ActionProposal,
     ApprovalDecision,
     ApprovalRequest,
